Make filtering more generic and less tightly coupled to JsonFields